<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sparator1"/>

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sparator1" />

    <CheckBox
        android:id="@+id/sms_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_sms" />

    <CheckBox
        android:id="@+id/call_ok"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:text="@string/allow_call" />

    <CheckBox
        android:id="@+id/inet_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allow_inet" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sparator1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/battery"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:max="100" android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sparator1" />

    <AutoCompleteTextView
        android:id="@+id/peerIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <requestFocus />
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_status_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+15 min"
        android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="right" android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sparator1" />

</LinearLayout>